--- a/formularios.html
+++ b/formularios.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Home">Index</a></li>
+                <li><a href="index.html">Index</a></li>
                 <li><a href="#">Link 6</a></li>
                 <li><a href="#">Link 6</a></li>
                 <li><a href="#">Link 6</a></li>
