--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <h1>TABLAS DE EJEMPLO</h1>
 <body>
+    <a href="formularios.html">Ir formularios</a>
     <table border="1px"> 
         <tr>
             <td>Lenguaje</td>
